--- a/docs/_sass/minima.scss
+++ b/docs/_sass/minima.scss
@@ -26,6 +26,8 @@ $content-width:    800px !default;
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
 
+.page-heading { display: none; }
+
 // Use media queries like this:
 // @include media-query($on-palm) {
 //   .wrapper {
